--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mind Matters Home Page</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -104,26 +105,4 @@
     </div>
     <div class="background-video">
         <video autoplay muted loop playsinline>
-            <source src="backgroundwebsite.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </div>
-    <div class="content">
-        <h1>Welcome to the Mind Matters Home Page</h1>
-        <div class="logo">
-            <img src="MindMattersLogo_Upload.png" alt="Mind Matters Logo">
-        </div>
-        <div class="message">
-            Our website is currently under development. Come back soon for updates.
-        </div>
-        <div class="buttons">
-            <a href="https://www.instagram.com/mindmatters_foundation/" target="_blank">
-                <img src="https://static-00.iconduck.com/assets.00/instagram-with-circle-icon-2048x2048-21sdb59c.png" alt="Instagram Logo">
-            </a>
-            <a href="https://www.linkedin.com/company/mindmatters_foundation/" target="_blank">
-                <img src="https://static-00.iconduck.com/assets.00/linkedin-with-circle-icon-1024x1024-m0epmra3.png" alt="LinkedIn Logo">
-            </a>
-        </div>
-    </div>
-</body>
-</html>
+            <source src="backgroundwe
