--- a/index.html
+++ b/index.html
@@ -105,4 +105,26 @@
     </div>
     <div class="background-video">
         <video autoplay muted loop playsinline>
-            <source src="backgroundwe
+            <source src="backgroundwebsite.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+    <div class="content">
+        <h1>Welcome to the Mind Matters Home Page</h1>
+        <div class="logo">
+            <img src="MindMattersLogo_Upload.png" alt="Mind Matters Logo">
+        </div>
+        <div class="message">
+            Our website is currently under development. Come back soon for updates.
+        </div>
+        <div class="buttons">
+            <a href="https://www.instagram.com/mindmatters_foundation/" target="_blank">
+                <img src="https://static-00.iconduck.com/assets.00/instagram-with-circle-icon-2048x2048-21sdb59c.png" alt="Instagram Logo">
+            </a>
+            <a href="https://www.linkedin.com/company/mindmatters_foundation/" target="_blank">
+                <img src="https://static-00.iconduck.com/assets.00/linkedin-with-circle-icon-1024x1024-m0epmra3.png" alt="LinkedIn Logo">
+            </a>
+        </div>
+    </div>
+</body>
+</html>
