changed menu bar size

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             justify-content: center;
             padding: 10px 0;
             z-index: 2;
+            font-size: 1rem; /* Ensures consistent font size */
         }
         .menu-bar a {
             margin: 0 20px;
