--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
     <div class="menu-bar">
         <a href="index.html" class="menu-link">Home</a>
         <a href="about.html" class="menu-link">About</a>
-        <a href="https://donate.stripe.com/test_00g17Nbki81E32E8ww" class="menu-link" target="_blank">Donate</a>
+        <a href="donate.html" class="menu-link" target="_blank">Donate</a>
     </div>
     <div class="content">
         <div class="section">
