--- a/donate.html
+++ b/donate.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+o<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -80,7 +80,7 @@
         <!-- Venmo Section -->
         <div class="payment-section">
             <div class="payment-logo">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5e/Venmo_logo.svg/512px-Venmo_logo.svg.png" alt="Venmo Logo">
+                <img src="venmologo.png" alt="Venmo Logo">
             </div>
             <div class="payment-handle">@mindmatters_foundation</div>
         </div>
