--- a/donate.html
+++ b/donate.html
@@ -88,7 +88,7 @@ o<!DOCTYPE html>
         <!-- Zelle Section -->
         <div class="payment-section">
             <div class="payment-logo">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Zelle_logo.svg/512px-Zelle_logo.svg.png" alt="Zelle Logo">
+                <img src="zellelogo.png" alt="Zelle Logo">
             </div>
             <div class="payment-handle">[Your Zelle Handle Here]</div>
         </div>
