--- a/donate.html
+++ b/donate.html
@@ -1,4 +1,4 @@
-o<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -61,7 +61,13 @@ o<!DOCTYPE html>
         }
         .payment-logo img {
             width: 150px;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
+        }
+        .payment-name {
+            font-size: 1rem;
+            font-weight: bold;
+            margin-bottom: 10px;
+            color: #555;
         }
         .payment-handle {
             font-size: 1.2rem;
@@ -82,6 +88,7 @@ o<!DOCTYPE html>
             <div class="payment-logo">
                 <img src="venmologo.png" alt="Venmo Logo">
             </div>
+            <div class="payment-name">Venmo</div>
             <div class="payment-handle">@mindmatters_foundation</div>
         </div>
 
@@ -90,9 +97,9 @@ o<!DOCTYPE html>
             <div class="payment-logo">
                 <img src="zellelogo.png" alt="Zelle Logo">
             </div>
+            <div class="payment-name">Zelle</div>
             <div class="payment-handle">[Your Zelle Handle Here]</div>
         </div>
     </div>
 </body>
 </html>
-
