--- a/about.html
+++ b/about.html
@@ -73,25 +73,86 @@
         p {
             text-align: center;
         }
+        /* Styles for the additional team members */
+        .team-members {
+            display: flex;
+            justify-content: space-around;
+            align-items: flex-start;
+            flex-wrap: wrap; /* Allows wrapping on smaller screens */
+            gap: 40px; /* Spacing between each member block */
+        }
+        .team-member {
+            width: 200px; /* Ensures the placeholders line up nicely */
+            text-align: center;
+        }
     </style>
 </head>
 <body>
     <div class="menu-bar">
         <a href="index.html" class="menu-link">Home</a>
         <a href="about.html" class="menu-link">About</a>
-        <a href="donate.html" class="menu-link" target="_blank">Donate</a>
+        <a href="donate.html" class="menu-link">Donate</a>
     </div>
     <div class="content">
         <div class="section">
             <h1>Our Mission</h1>
-            <p>At Mind Matters, our mission is to raise and allocate funds for groundbreaking neuroscience research aimed at curing Alzheimer's, dementia, Parkinson's, and other neurological disorders. We are committed to supporting the scientists and researchers who are making strides in understanding and treating these conditions. By funding innovative research, we provide hope and work towards a future where these debilitating diseases are a thing of the past. Join us in empowering minds and transforming lives through the power of science and community support.</p>
+            <p>
+                At Mind Matters, our mission is to raise and allocate funds for groundbreaking
+                neuroscience research aimed at curing Alzheimer's, dementia, Parkinson's,
+                and other neurological disorders. We are committed to supporting the
+                scientists and researchers who are making strides in understanding and
+                treating these conditions. By funding innovative research, we provide hope
+                and work towards a future where these debilitating diseases are a thing of
+                the past. Join us in empowering minds and transforming lives through the
+                power of science and community support.
+            </p>
         </div>
         <div class="section">
             <h1>The Team</h1>
+            
+            <!-- Founder Section -->
             <h3>Founder</h3>
             <div class="gray-placeholder"></div>
             <h3>Rhys Ahamparam</h3>
-            <p>Hi, my name is Rhys Ahamparam, and I’m a high school junior from Houston, Texas. I founded this nonprofit in memory of my grandfather, who was diagnosed with Lewy body dementia. Watching him battle this disease had a profound impact on me, and his passing earlier this year inspired me to take action. Through this organization, I hope to raise awareness and support for neuroscience research, aiming to make a difference for others affected by similar conditions.</p>
+            <p>
+                Hi, my name is Rhys Ahamparam, and I’m a high school junior from Houston, Texas.
+                I founded this nonprofit in memory of my grandfather, who was diagnosed with
+                Lewy body dementia. Watching him battle this disease had a profound impact on me,
+                and his passing earlier this year inspired me to take action. Through this
+                organization, I hope to raise awareness and support for neuroscience research,
+                aiming to make a difference for others affected by similar conditions.
+            </p>
+            
+            <!-- Additional Team Members -->
+            <div class="team-members">
+                <!-- Eshaan Tripathi -->
+                <div class="team-member">
+                    <div class="gray-placeholder"></div>
+                    <h3>Eshaan Tripathi</h3>
+                    <p>Director of Operations</p>
+                </div>
+
+                <!-- JD Suarez -->
+                <div class="team-member">
+                    <div class="gray-placeholder"></div>
+                    <h3>JD Suarez</h3>
+                    <p>Outreach Coordinator</p>
+                </div>
+
+                <!-- David Achinivu -->
+                <div class="team-member">
+                    <div class="gray-placeholder"></div>
+                    <h3>David Achinivu</h3>
+                    <p>Assistant Outreach Coordinator</p>
+                </div>
+
+                <!-- Emmanuel Wieczorek -->
+                <div class="team-member">
+                    <div class="gray-placeholder"></div>
+                    <h3>Emmanuel Wieczorek</h3>
+                    <p>Volunteer Coordinator</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
