--- a/donate.html
+++ b/donate.html
@@ -98,7 +98,7 @@
                 <img src="zellelogo.png" alt="Zelle Logo">
             </div>
             <div class="payment-name">Zelle</div>
-            <div class="payment-handle">[Your Zelle Handle Here]</div>
+            <div class="payment-handle">mindmattersfoundation24@gmail.com</div>
         </div>
     </div>
 </body>
