--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <img src="MindMattersLogo_Upload.png" alt="Mind Matters Logo">
         </div>
         <div class="message">
-            Our website is currently under development. Come back soon for updates.
+            Our website is mostly under development, but our donation and about pages are active.
         </div>
         <div class="buttons">
             <a href="https://www.instagram.com/mindmatters_foundation/" target="_blank">
