--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
             margin: 0;
             padding: 0;
             display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
+            flex-direction: row;
+            justify-content: space-between;
             height: 100vh;
             color: #333;
-            overflow: hidden;
             background: #000;
         }
         .menu-bar {
@@ -29,7 +27,7 @@
             justify-content: center;
             padding: 10px 0;
             z-index: 2;
-            font-size: 1rem; /* Ensures consistent font size */
+            font-size: 1rem;
         }
         .menu-bar a {
             margin: 0 20px;
@@ -69,6 +67,7 @@
             position: relative;
             z-index: 1;
             text-align: center;
+            flex: 2;
         }
         .logo {
             margin: 20px 0;
@@ -95,6 +94,16 @@
         .buttons img {
             width: 40px;
             height: 40px;
+        }
+        .instagram-embed {
+            flex: 1;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+        .instagram-embed iframe {
+            width: 100%;
+            height: 80%;
+            border: none;
         }
     </style>
 </head>
@@ -126,6 +135,13 @@
                 <img src="https://static-00.iconduck.com/assets.00/linkedin-with-circle-icon-1024x1024-m0epmra3.png" alt="LinkedIn Logo">
             </a>
         </div>
+    </div>
+    <div class="instagram-embed">
+        <iframe 
+            src="https://www.instagram.com/mindmatters_foundation/embed" 
+            allowtransparency="true" 
+            scrolling="no">
+        </iframe>
     </div>
 </body>
 </html>
