--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@
             <div class="team-members">
                 <!-- Eshaan Tripathi -->
                 <div class="team-member">
-                    <img src="esh.png" alt="Eshaan Tripathi" class="leader-photo">
+                    <img src="placeholderimage.png" alt="Eshaan Tripathi" class="leader-photo">
                     <h3>Eshaan Tripathi</h3>
                     <p>Director of Operations</p>
                 </div>
@@ -141,14 +141,14 @@
 
                 <!-- David Achinivu -->
                 <div class="team-member">
-                    <img src="david.png" alt="David Achinivu" class="leader-photo">
+                    <img src="placeholderimage.png" alt="David Achinivu" class="leader-photo">
                     <h3>David Achinivu</h3>
                     <p>Assistant Outreach Coordinator</p>
                 </div>
 
                 <!-- Emmanuel Wieczorek -->
                 <div class="team-member">
-                    <img src="emmanuel.png" alt="Emmanuel Wieczorek" class="leader-photo">
+                    <img src="placeholderimage.png" alt="Emmanuel Wieczorek" class="leader-photo">
                     <h3>Emmanuel Wieczorek</h3>
                     <p>Volunteer Coordinator</p>
                 </div>
