--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Mind Matters Home Page</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
+        :root {
+            --primary-color: rgb(45, 197, 105);
+            --secondary-color: rgb(10, 129, 66);
+            --white: #ffffff;
+        }
+
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -15,26 +21,25 @@
             align-items: center;
             flex-direction: column;
             height: 100vh;
-            color: #333;
-            overflow: hidden;
-            background: #000;
+            color: var(--secondary-color);
+            background: var(--white);
         }
         .menu-bar {
             position: fixed;
             top: 0;
             width: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
-            color: white;
+            background-color: var(--secondary-color);
+            color: var(--white);
             display: flex;
             justify-content: center;
             padding: 10px 0;
             z-index: 2;
-            font-size: 1rem; /* Ensures consistent font size */
+            font-size: 1rem;
         }
         .menu-bar a {
             margin: 0 20px;
             text-decoration: none;
-            color: white;
+            color: var(--white);
             font-size: 1rem;
             position: relative;
             display: inline-block;
@@ -46,24 +51,11 @@
             left: 0;
             width: 0;
             height: 2px;
-            background-color: white;
+            background-color: var(--white);
             transition: width 0.3s ease-in-out;
         }
         .menu-bar a:hover::after {
             width: 100%;
-        }
-        .background-video {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-        }
-        .background-video video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
         }
         .content {
             position: relative;
@@ -80,6 +72,7 @@
         .message {
             margin: 20px 0;
             font-size: 1.2rem;
+            color: var(--secondary-color);
         }
         .buttons {
             display: flex;
@@ -96,6 +89,19 @@
             width: 40px;
             height: 40px;
         }
+        button {
+            background: var(--primary-color);
+            color: var(--white);
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            font-size: 1rem;
+            cursor: pointer;
+            transition: background 0.3s ease;
+        }
+        button:hover {
+            background: var(--secondary-color);
+        }
     </style>
 </head>
 <body>
@@ -103,12 +109,6 @@
         <a href="index.html" class="menu-link">Home</a>
         <a href="about.html" class="menu-link">About</a>
         <a href="donate.html" class="menu-link" target="_blank">Donate</a>
-    </div>
-    <div class="background-video">
-        <video autoplay muted loop playsinline>
-            <source src="backgroundwebsite.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
     </div>
     <div class="content">
         <h1>Welcome to the Mind Matters Home Page</h1>
