--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mind Matters Home Page</title>
+    <title>Mind Matters Home</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
         :root {
@@ -58,9 +58,13 @@
             width: 100%;
         }
         .content {
-            position: relative;
-            z-index: 1;
+            margin: 80px auto;
+            max-width: 800px;
+            padding: 20px;
             text-align: center;
+        }
+        .section {
+            margin-bottom: 40px;
         }
         .logo {
             margin: 20px 0;
@@ -111,7 +115,7 @@
         <a href="donate.html" class="menu-link" target="_blank">Donate</a>
     </div>
     <div class="content">
-        <h1>Welcome to the Mind Matters Home Page</h1>
+        <h1>Welcome</h1>
         <div class="logo">
             <img src="MindMattersLogo_Upload.png" alt="Mind Matters Logo">
         </div>
