--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mind Matters Home</title>
+    <title>Mind Matters Home Page</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
         :root {
@@ -29,12 +29,11 @@
             top: 0;
             width: 100%;
             background-color: var(--secondary-color);
-            color: var(--white);
+            color: white;
             display: flex;
             justify-content: center;
             padding: 10px 0;
             z-index: 2;
-            font-size: 1rem;
         }
         .menu-bar a {
             margin: 0 20px;
@@ -58,13 +57,9 @@
             width: 100%;
         }
         .content {
-            margin: 80px auto;
-            max-width: 800px;
-            padding: 20px;
+            position: relative;
+            z-index: 1;
             text-align: center;
-        }
-        .section {
-            margin-bottom: 40px;
         }
         .logo {
             margin: 20px 0;
@@ -115,7 +110,7 @@
         <a href="donate.html" class="menu-link" target="_blank">Donate</a>
     </div>
     <div class="content">
-        <h1>Welcome</h1>
+        <h1>Welcome to the Mind Matters Home Page</h1>
         <div class="logo">
             <img src="MindMattersLogo_Upload.png" alt="Mind Matters Logo">
         </div>
