--- a/index.html
+++ b/index.html
@@ -16,11 +16,6 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            height: 100vh;
             color: var(--secondary-color);
             background: var(--white);
         }
@@ -29,11 +24,12 @@
             top: 0;
             width: 100%;
             background-color: var(--secondary-color);
-            color: white;
+            color: var(--white);
             display: flex;
             justify-content: center;
             padding: 10px 0;
             z-index: 2;
+            font-size: 1rem;
         }
         .menu-bar a {
             margin: 0 20px;
@@ -57,49 +53,61 @@
             width: 100%;
         }
         .content {
-            position: relative;
-            z-index: 1;
             text-align: center;
+            padding-top: 100px;
         }
         .logo {
             margin: 20px 0;
         }
         .logo img {
-            width: 250px;
-            height: 250px;
+            width: 400px;
+            height: auto;
         }
-        .message {
-            margin: 20px 0;
-            font-size: 1.2rem;
-            color: var(--secondary-color);
-        }
-        .buttons {
-            display: flex;
-            gap: 20px;
-            justify-content: center;
-        }
-        .buttons a {
-            display: flex;
-            align-items: center;
-            text-decoration: none;
-            color: inherit;
-        }
-        .buttons img {
-            width: 40px;
-            height: 40px;
-        }
-        button {
+        .donate-button {
+            margin: 30px auto;
+            display: inline-block;
             background: var(--primary-color);
             color: var(--white);
-            padding: 10px 20px;
+            padding: 15px 30px;
             border: none;
             border-radius: 5px;
-            font-size: 1rem;
-            cursor: pointer;
+            font-size: 1.5rem;
+            text-decoration: none;
             transition: background 0.3s ease;
         }
-        button:hover {
+        .donate-button:hover {
             background: var(--secondary-color);
+        }
+        .photo-section {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            padding: 40px;
+        }
+        .photo-placeholder {
+            width: 100%;
+            height: 200px;
+            background: var(--secondary-color);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: var(--white);
+            font-size: 1.2rem;
+            border-radius: 10px;
+        }
+        footer {
+            background: var(--secondary-color);
+            color: var(--white);
+            padding: 20px;
+            text-align: center;
+        }
+        footer a {
+            color: var(--primary-color);
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        footer a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -107,24 +115,30 @@
     <div class="menu-bar">
         <a href="index.html" class="menu-link">Home</a>
         <a href="about.html" class="menu-link">About</a>
-        <a href="donate.html" class="menu-link" target="_blank">Donate</a>
+        <a href="donate.html" class="menu-link">Donate</a>
     </div>
     <div class="content">
-        <h1>Welcome to the Mind Matters Home Page</h1>
         <div class="logo">
             <img src="MindMattersLogo_Upload.png" alt="Mind Matters Logo">
         </div>
-        <div class="message">
-            Our website is mostly under development, but our donation and about pages are active.
-        </div>
-        <div class="buttons">
-            <a href="https://www.instagram.com/mindmatters_foundation/" target="_blank">
-                <img src="https://static-00.iconduck.com/assets.00/instagram-with-circle-icon-2048x2048-21sdb59c.png" alt="Instagram Logo">
-            </a>
-            <a href="https://www.linkedin.com/company/mindmatters_foundation/" target="_blank">
-                <img src="https://static-00.iconduck.com/assets.00/linkedin-with-circle-icon-1024x1024-m0epmra3.png" alt="LinkedIn Logo">
-            </a>
+        <a href="donate.html" class="donate-button">Donate Now</a>
+        <div class="photo-section">
+            <div class="photo-placeholder">Photo Placeholder 1</div>
+            <div class="photo-placeholder">Photo Placeholder 2</div>
+            <div class="photo-placeholder">Photo Placeholder 3</div>
         </div>
     </div>
+    <footer>
+        <p>Follow us on:
+            <a href="https://www.instagram.com/mindmatters_foundation/" target="_blank">Instagram</a>
+            <a href="https://www.linkedin.com/company/mindmatters_foundation/" target="_blank">LinkedIn</a>
+        </p>
+        <p>
+            <a href="index.html">Home</a> |
+            <a href="about.html">About</a> |
+            <a href="donate.html">Donate</a>
+        </p>
+        <p>Contact us: <a href="mailto:mindmattersfoundation24@gmail.com">mindmattersfoundation24@gmail.com</a></p>
+    </footer>
 </body>
 </html>
