--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             padding: 0;
             color: var(--secondary-color);
             background: var(--white);
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
         .menu-bar {
             position: fixed;
@@ -55,6 +58,7 @@
         .content {
             text-align: center;
             padding-top: 100px;
+            flex: 1;
         }
         .logo {
             margin: 20px 0;
@@ -100,6 +104,21 @@
             color: var(--white);
             padding: 20px;
             text-align: center;
+            margin-top: auto;
+        }
+        footer .social-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px 0;
+        }
+        footer .social-buttons a {
+            display: flex;
+            align-items: center;
+        }
+        footer .social-buttons img {
+            width: 40px;
+            height: 40px;
         }
         footer a {
             color: var(--primary-color);
@@ -129,10 +148,14 @@
         </div>
     </div>
     <footer>
-        <p>Follow us on:
-            <a href="https://www.instagram.com/mindmatters_foundation/" target="_blank">Instagram</a>
-            <a href="https://www.linkedin.com/company/mindmatters_foundation/" target="_blank">LinkedIn</a>
-        </p>
+        <div class="social-buttons">
+            <a href="https://www.instagram.com/mindmatters_foundation/" target="_blank">
+                <img src="https://static-00.iconduck.com/assets.00/instagram-with-circle-icon-2048x2048-21sdb59c.png" alt="Instagram">
+            </a>
+            <a href="https://www.linkedin.com/company/mindmatters_foundation/" target="_blank">
+                <img src="https://static-00.iconduck.com/assets.00/linkedin-with-circle-icon-1024x1024-m0epmra3.png" alt="LinkedIn">
+            </a>
+        </div>
         <p>
             <a href="index.html">Home</a> |
             <a href="about.html">About</a> |
