--- a/index.html
+++ b/index.html
@@ -89,15 +89,36 @@
             padding: 40px;
         }
         .photo-placeholder {
-            width: 100%;
-            height: 200px;
-            background: var(--secondary-color);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: var(--white);
-            font-size: 1.2rem;
+            position: relative;
+            width: 300px;
+            height: 225px; /* Aspect ratio 4:3 */
+            overflow: hidden;
             border-radius: 10px;
+            cursor: pointer;
+        }
+        .photo-placeholder img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.3s ease;
+        }
+        .photo-placeholder:hover img {
+            transform: scale(1.1);
+        }
+        .photo-placeholder span {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: var(--white);
+            background: rgba(0, 0, 0, 0.6);
+            padding: 10px 20px;
+            border-radius: 5px;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+        .photo-placeholder:hover span {
+            opacity: 1;
         }
         footer {
             background: var(--secondary-color);
@@ -142,9 +163,18 @@
         </div>
         <a href="donate.html" class="donate-button">Donate Now</a>
         <div class="photo-section">
-            <div class="photo-placeholder">Photo Placeholder 1</div>
-            <div class="photo-placeholder">Photo Placeholder 2</div>
-            <div class="photo-placeholder">Photo Placeholder 3</div>
+            <a href="about.html" class="photo-placeholder">
+                <img src="paata_beach.png" alt="About Us">
+                <span>About</span>
+            </a>
+            <div class="photo-placeholder">
+                <img src="https://via.placeholder.com/1024x768" alt="Photo Placeholder 2">
+                <span>Photo Placeholder</span>
+            </div>
+            <div class="photo-placeholder">
+                <img src="https://via.placeholder.com/1024x768" alt="Photo Placeholder 3">
+                <span>Photo Placeholder</span>
+            </div>
         </div>
     </div>
     <footer>
