--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             flex: 1 1 calc(33.333% - 20px);
             height: 500px;
             overflow: hidden;
+            border-radius: 15px;
             cursor: pointer;
         }
         .photo-placeholder img {
@@ -100,6 +101,7 @@
             height: 100%;
             object-fit: cover;
             transition: transform 0.3s ease;
+            border-radius: 15px;
         }
         .photo-placeholder:hover img {
             transform: scale(1.1);
@@ -162,10 +164,10 @@
         </div>
         <a href="donate.html" class="donate-button">Donate Now</a>
         <div class="photo-section">
-            <a href="about.html" class="photo-placeholder">
+            <div class="photo-placeholder">
                 <img src="volunteering_temp.jpg" alt="Volunteering">
-                <span>About</span>
-            </a>
+                <span>Volunteer</span>
+            </div>
             <a href="about.html" class="photo-placeholder">
                 <img src="paata_beach.png" alt="About Us">
                 <span>About</span>
