--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
 </head>
 <body>
     <div class="menu-bar">
-        <a href="/" class="menu-link">Home</a>
+        <a href="/website/" class="menu-link">Home</a>
         <a href="about.html" class="menu-link">About</a>
         <a href="donate.html" class="menu-link" target="_blank">Donate</a>
     </div>
