--- a/about/index.html
+++ b/about/index.html
@@ -90,7 +90,7 @@
 <body>
     <div class="menu-bar">
         <a href="/website/" class="menu-link">Home</a>
-        <a href="about.html" class="menu-link">About</a>
+        <a href="/website/about" class="menu-link">About</a>
         <a href="donate.html" class="menu-link" target="_blank">Donate</a>
     </div>
     <div class="content">
