--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
 </head>
 <body>
     <div class="menu-bar">
-        <a href="index.html" class="menu-link">Home</a>
-        <a href="about.html" class="menu-link">About</a>
+        <a href="/website" class="menu-link">Home</a>
+        <a href="/website/about" class="menu-link">About</a>
         <a href="donate.html" class="menu-link">Donate</a>
     </div>
     <div class="content">
