--- a/about/index.html
+++ b/about/index.html
@@ -91,7 +91,7 @@
     <div class="menu-bar">
         <a href="/website/" class="menu-link">Home</a>
         <a href="/website/about" class="menu-link">About</a>
-        <a href="donate.html" class="menu-link" target="_blank">Donate</a>
+        <a href="/website/donate" class="menu-link" target="_blank">Donate</a>
     </div>
     <div class="content">
         <div class="section">
