--- a/donate/index.html
+++ b/donate/index.html
@@ -80,7 +80,7 @@
     <div class="menu-bar">
         <a href="/website/" class="menu-link">Home</a>
         <a href="/website/about" class="menu-link">About</a>
-        <a href="/website/donate class="menu-link">Donate</a>
+        <a href="/website/donate" class="menu-link">Donate</a>
     </div>
     <div class="content">
         <!-- Venmo Section -->
