--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
             </a>
         </div>
         <p>
-            <a href="index.html">Home</a> |
-            <a href="about.html">About</a> |
-            <a href="donate.html">Donate</a>
+            <a href="/website/">Home</a> |
+            <a href="/website/about">About</a> |
+            <a href="/website/donate">Donate</a>
         </p>
         <p>Contact us: <a href="mailto:mindmattersfoundation24@gmail.com">mindmattersfoundation24@gmail.com</a></p>
     </footer>
