--- a/volunteer/index.html
+++ b/volunteer/index.html
@@ -93,10 +93,10 @@
 </head>
 <body>
     <div class="menu-bar">
-        <a href="index.html" class="menu-link">Home</a>
-        <a href="about.html" class="menu-link">About</a>
-        <a href="donate.html" class="menu-link">Donate</a>
-        <a href="volunteer.html" class="menu-link">Volunteer</a>
+        <a href="/index" class="menu-link">Home</a>
+        <a href="/about" class="menu-link">About</a>
+        <a href="/donate" class="menu-link">Donate</a>
+        <a href="/volunteer" class="menu-link">Volunteer</a>
     </div>
     <div class="content">
         <h1>Volunteer</h1>
