--- a/about/index.html
+++ b/about/index.html
@@ -6,29 +6,39 @@
     <title>About - Mind Matters</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
+        :root {
+            --primary-color: rgb(45, 197, 105);
+            --secondary-color: rgb(10, 129, 66);
+            --white: #ffffff;
+        }
+
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: #f4f4f9;
-            color: #333;
+            color: var(--secondary-color);
+            background: var(--white);
             line-height: 1.6;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
         .menu-bar {
             position: fixed;
             top: 0;
             width: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
-            color: white;
+            background-color: var(--secondary-color);
+            color: var(--white);
             display: flex;
             justify-content: center;
             padding: 10px 0;
             z-index: 2;
+            font-size: 1rem;
         }
         .menu-bar a {
             margin: 0 20px;
             text-decoration: none;
-            color: white;
+            color: var(--white);
             font-size: 1rem;
             position: relative;
             display: inline-block;
@@ -40,7 +50,7 @@
             left: 0;
             width: 0;
             height: 2px;
-            background-color: white;
+            background-color: var(--white);
             transition: width 0.3s ease-in-out;
         }
         .menu-bar a:hover::after {
@@ -63,7 +73,7 @@
             margin: 20px auto;
         }
         h1, h2 {
-            color: #444;
+            color: var(--secondary-color);
             font-size: 2rem;
             margin-bottom: 20px;
         }
@@ -85,13 +95,43 @@
             width: 200px;
             text-align: center;
         }
+        footer {
+            background: var(--secondary-color);
+            color: var(--white);
+            padding: 20px;
+            text-align: center;
+            margin-top: auto;
+        }
+        footer .social-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px 0;
+        }
+        footer .social-buttons a {
+            display: flex;
+            align-items: center;
+        }
+        footer .social-buttons img {
+            width: 40px;
+            height: 40px;
+        }
+        footer a {
+            color: var(--primary-color);
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        footer a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
     <div class="menu-bar">
-        <a href="/website/" class="menu-link">Home</a>
-        <a href="/website/about" class="menu-link">About</a>
-        <a href="/website/donate" class="menu-link" target="_blank">Donate</a>
+        <a href="/index" class="menu-link">Home</a>
+        <a href="/about" class="menu-link">About</a>
+        <a href="/donate" class="menu-link">Donate</a>
+        <a href="/volunteer" class="menu-link">Volunteer</a>
     </div>
     <div class="content">
         <div class="section">
@@ -155,5 +195,22 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="social-buttons">
+            <a href="https://www.instagram.com/mindmatters_foundation/" target="_blank">
+                <img src="https://static-00.iconduck.com/assets.00/instagram-with-circle-icon-2048x2048-21sdb59c.png" alt="Instagram">
+            </a>
+            <a href="https://www.linkedin.com/company/mindmatters_foundation/" target="_blank">
+                <img src="https://static-00.iconduck.com/assets.00/linkedin-with-circle-icon-1024x1024-m0epmra3.png" alt="LinkedIn">
+            </a>
+        </div>
+        <p>
+            <a href="/index">Home</a> |
+            <a href="/about">About</a> |
+            <a href="/donate">Donate</a> |
+            <a href="/volunteer">Volunteer</a>
+        </p>
+        <p>Contact us: <a href="mailto:mindmattersfoundation24@gmail.com">mindmattersfoundation24@gmail.com</a></p>
+    </footer>
 </body>
 </html>
