--- a/about/index.html
+++ b/about/index.html
@@ -205,7 +205,7 @@
             </a>
         </div>
         <p>
-            <a href="/index">Home</a> |
+            <a href="/website">Home</a> |
             <a href="/about">About</a> |
             <a href="/donate">Donate</a> |
             <a href="/volunteer">Volunteer</a>
