--- a/about/index.html
+++ b/about/index.html
@@ -128,7 +128,7 @@
 </head>
 <body>
     <div class="menu-bar">
-        <a href="/index" class="menu-link">Home</a>
+        <a href="/website" class="menu-link">Home</a>
         <a href="/about" class="menu-link">About</a>
         <a href="/donate" class="menu-link">Donate</a>
         <a href="/volunteer" class="menu-link">Volunteer</a>
