--- a/about/index.html
+++ b/about/index.html
@@ -205,10 +205,10 @@
             </a>
         </div>
         <p>
-            <a href="/website">Home</a> |
-            <a href="/about">About</a> |
-            <a href="/donate">Donate</a> |
-            <a href="/volunteer">Volunteer</a>
+            <a href="/website/">Home</a> |
+            <a href="/website/about">About</a> |
+            <a href="/website/donate">Donate</a> |
+            <a href="/website/volunteer">Volunteer</a>
         </p>
         <p>Contact us: <a href="mailto:mindmattersfoundation24@gmail.com">mindmattersfoundation24@gmail.com</a></p>
     </footer>
