--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <div class="menu-bar">
         <a href="/website" class="menu-link">Home</a>
         <a href="/website/about" class="menu-link">About</a>
-        <a href="donate.html" class="menu-link">Donate</a>
+        <a href="/website/donate" class="menu-link">Donate</a>
     </div>
     <div class="content">
         <div class="logo">
