--- a/about/index.html
+++ b/about/index.html
@@ -129,9 +129,9 @@
 <body>
     <div class="menu-bar">
         <a href="/website" class="menu-link">Home</a>
-        <a href="/about" class="menu-link">About</a>
-        <a href="/donate" class="menu-link">Donate</a>
-        <a href="/volunteer" class="menu-link">Volunteer</a>
+        <a href="/website/about" class="menu-link">About</a>
+        <a href="/website/donate" class="menu-link">Donate</a>
+        <a href="/website/volunteer" class="menu-link">Volunteer</a>
     </div>
     <div class="content">
         <div class="section">
