--- a/volunteer/index.html
+++ b/volunteer/index.html
@@ -93,10 +93,10 @@
 </head>
 <body>
     <div class="menu-bar">
-        <a href="/index" class="menu-link">Home</a>
-        <a href="/about" class="menu-link">About</a>
-        <a href="/donate" class="menu-link">Donate</a>
-        <a href="/volunteer" class="menu-link">Volunteer</a>
+        <a href="/website/index" class="menu-link">Home</a>
+        <a href="/website/about" class="menu-link">About</a>
+        <a href="/website/donate" class="menu-link">Donate</a>
+        <a href="/website/volunteer" class="menu-link">Volunteer</a>
     </div>
     <div class="content">
         <h1>Volunteer</h1>
@@ -112,10 +112,10 @@
             </a>
         </div>
         <p>
-            <a href="index.html">Home</a> |
-            <a href="about.html">About</a> |
-            <a href="donate.html">Donate</a> |
-            <a href="volunteer.html">Volunteer</a>
+            <a href="/website/">Home</a> |
+            <a href="/website/about">About</a> |
+            <a href="/website/donate">Donate</a> |
+            <a href="/website/volunteer">Volunteer</a>
         </p>
         <p>Contact us: <a href="mailto:mindmattersfoundation24@gmail.com">mindmattersfoundation24@gmail.com</a></p>
     </footer>
