--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@
         <div class="logo">
             <img src="MindMattersLogo_Upload.png" alt="Mind Matters Logo">
         </div>
-        <a href="donate.html" class="donate-button">Donate Now</a>
+        <a href="/website/donate" class="donate-button">Donate Now</a>
         <div class="photo-section">
             <div class="photo-placeholder">
                 <img src="volunteering_temp.jpg" alt="Volunteering">
                 <span>Volunteer</span>
             </div>
-            <a href="about.html" class="photo-placeholder">
+            <a href="/website/about" class="photo-placeholder">
                 <img src="paata_beach.png" alt="About Us">
                 <span>About</span>
             </a>
