--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
         <a href="/website/donate" class="donate-button">Donate Now</a>
         <div class="photo-section">
             <div class="photo-placeholder">
+                <a href="/website/about" class="photo-placeholder">
                 <img src="volunteering_temp.jpg" alt="Volunteering">
                 <span>Volunteer</span>
             </div>
