--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
         <a href="/website/donate" class="donate-button">Donate Now</a>
         <div class="photo-section">
             <div class="photo-placeholder">
-                <a href="/website/about" class="photo-placeholder">
+            <a href="/website/volunteering/" class="photo-placeholder">
                 <img src="volunteering_temp.jpg" alt="Volunteering">
                 <span>Volunteer</span>
             </div>
-            <a href="/website/about" class="photo-placeholder">
+            <a href="/website/about/" class="photo-placeholder">
                 <img src="paata_beach.png" alt="About Us">
                 <span>About</span>
             </a>
